Troubleshooting Sidebar bugs, implementing dark mode

--- a/styles/header.css
+++ b/styles/header.css
@@ -12,6 +12,7 @@
 }
 
 .header__content {
+    box-sizing: border-box;
     width: 100%;
     max-width: 975px;
     padding: 0 14px;
@@ -51,14 +52,14 @@
     font-size: 12px;
     font-weight: 300;
     text-decoration: none;
-    color: #999999;
+    color: var(--text-light);
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
 .header__search input:focus {
-    color: #262626;
+    color: var(--text-dark);
 }
 
 .header__buttons {
@@ -78,4 +79,19 @@
     .header__search {
         display: flex;
     }
+}
+
+.header__theme-button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+.header__theme-button-moon {
+    display: unset;
+
+}
+.header__theme-button-sun {
+    display: none;
+    
 }
