--- a/styles/side.css
+++ b/styles/side.css
@@ -25,8 +25,8 @@
 
 .side-menu__user-info {
     display: flex;
-    flex-direction: column;
     align-items: flex-start;
+    flex-direction: column;
     flex: 1;
     gap: 4px;
 }
@@ -35,7 +35,7 @@
 .side-menu__suggestions-info a {
     font-size: 14px;
     font-weight: 500;
-    color: #262626;
+    color: var(--text-dark);
     text-decoration: none;
     text-transform: lowercase;
     max-width: 180px;
@@ -47,7 +47,7 @@
 .side-menu__user-info span {
     font-size: 14px;
     font-weight: 400;
-    color: #999999;
+    color: var(--text-light);
     max-width: 180px;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -76,7 +76,7 @@
 .side-menu__suggestions-header h2 {
     font-size: 14px;
     font-weight: 500;
-    color: #999999;
+    color: var(--text-light);
 }
 
 .side-menu__suggestions-header button {
@@ -85,6 +85,7 @@
     cursor: pointer;
     font-size: 12px;
     font-weight: 500;
+    color: var(--text-dark);
 }
 
 .side-menu__suggestions-content {
@@ -100,7 +101,7 @@
     align-items: center;
 }
 
-.side-menu__suggestions-avatar {
+.side-menu__suggestion-avatar {
     width: 32px;
     height: 32px;
     border-radius: 50%;
@@ -111,7 +112,7 @@
 }
 
 
-.side-menu__suggestions-info {
+.side-menu__suggestion-info {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
@@ -119,21 +120,33 @@
     gap: 2px;
 }
 
-.side-menu__suggestions-info a:hover {
-    text-decoration: underline;
-}
-
-.side-menu__suggestions-info span {
-    font-size: 12px;
-    font-weight: 400;
-    color: #999999;
+.side-menu__suggestion-info a {
+    font-size: 14px;
+    font-weight: 500;
+    color: var(--text-dark);
+    text-decoration: none;
+    text-transform: lowercase;
     max-width: 180px;
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
 }
 
-.side-menu__suggestions-button {
+.side-menu__suggestion-info a:hover {
+    text-decoration: underline;
+}
+
+.side-menu__suggestion-info span {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light);
+    max-width: 180px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.side-menu__suggestion-button {
     background-color: transparent;
     border: none;
     cursor: pointer;
@@ -172,7 +185,7 @@
 .side-menu__footer-copyright {
     font-size: 11px;
     font-weight: 400;
-    color: #999999;
+    color: var(--text-light);
     text-decoration: none;
 }
 
@@ -193,7 +206,7 @@
     display: none;
     width: 30px;
     height: 30px;
-    border: 1px solid #262626;
+    border: 1px solid var(--text-dark);
     border-radius: 50%;
     position: absolute;
     top: 50%;
